--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -210,3 +210,9 @@ body.show-cart-page .other-page {
     color: #eee;
     box-shadow: 0 0 0;
 }
+
+footer {
+    margin: 7px 0 0;
+    text-align: right;
+    font-style: italic;
+}
